k8s/kustomization/bases/client/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      restartPolicy: Always
      containers:
        - name: client
          image: registry.gitlab.com/farcasmihai91/starter/static-client:855d392b
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "400m"
              memory: "800Mi"
